
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/transferCal" android:padding="10dp"
        android:text="@string/transferdetails"
        />





    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:weightSum="2">




        <TextView
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/transferdate"
            android:hint="@string/transferdate"
            android:padding="10dp"
            />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:id="@+id/ordernumber"
            android:hint="@string/ordernumber"
            android:padding="10dp"
            />


    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:weightSum="2">


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:id="@+id/firstnameplaceholder"
            android:hint="@string/bfirstname"
            android:padding="10dp"
            />


        <TextView
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/lastnameplaceholder"
            android:hint="@string/blastname"
            android:padding="10dp"
            />



    </LinearLayout>






    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"

        android:text="@string/payref"
        android:gravity="center_vertical|center_horizontal" />


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/transferstatus"

        android:hint="@string/transstatus"
        android:padding="10dp"
        />


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:weightSum="2">




        <TextView
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/transferaccount"
            android:hint="@string/account"
            android:padding="10dp"
            />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:id="@+id/transferbank"
            android:hint="@string/bank"
            android:padding="10dp"
            />


    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:weightSum="2">


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"

            android:hint="@string/paymentref"
            android:padding="10dp"
            />


        <TextView
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/cpasswordplaceholder"
            android:hint="@string/bpayref"
            android:padding="10dp"
            android:inputType=
                "textCapSentences|textAutoCorrect"/>



    </LinearLayout>



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:weightSum="2">


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"

            android:hint="@string/paymentreason"
            android:padding="10dp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emailplaceholder"

            android:hint="@string/bpayreason"
            android:padding="10dp"  android:layout_weight="0.5"
            />




    </LinearLayout>





    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/transferSummary" android:padding="10dp"
        android:text="@string/transferSummary"
        />



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:weightSum="2">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:text="Amount we will send"

            android:gravity="center_vertical" />


        <TextView
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/amountsent"
            android:hint="0.00 GBP"
            android:textAlignment="viewEnd" />


    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:weightSum="2">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:text="Transfer fee"

            android:gravity="center_vertical" />


        <TextView
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:ems="10"
            android:id="@+id/fee"
            android:hint="0.00 GBP"
            />


    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:weightSum="2">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:text="Total price"

            android:gravity="center_vertical" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:id="@+id/transfertotal"
            android:hint="0.00 GBP"
            android:textAlignment="viewEnd"

            />


    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Amount paid to receiver"
            android:layout_weight="0.5"
            android:gravity="center_vertical" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:id="@+id/transferpaid"
            android:hint="0.00 NGN"
            android:layout_weight="0.5"
            />


    </LinearLayout>




</LinearLayout>


